--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <html>
 
 <head>
+
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?9d7a6d2b313da9fdbcbf74c11024ecdf";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 <meta charset="utf-8">
 <title> 希硕号传奇免费版本</title>
 <style type="text/css">
