--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ body,td,th {
     <fieldset class="f2">
 
       <div id="urls">
-        <div><a href="https://gcq.lanzouy.com/u/quanwuyang"  target="_blank">群号：273618267</a></div>
+        <div><a href="https://qm.qq.com/q/ewCuh6eM92"  target="_blank">群号：273618267</a></div>
       </div>
     </fieldset>
 	<fieldset class="fl">
