--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@ body,td,th {
 				</span></span></legend>
 
 		<div id="urls">
-		  <div><a href="https://gcq.lanzouy.com/u/quanwuyang"  target="_blank">熊猫【无充值NPC】</a></div>
+		  <div><a href="https://11"  target="_blank">熊猫【无充值NPC】</a></div>
 		</div>
 	<!--		
 		<div id="urls">
-			<div><a href="https://gcq.lanzouy.com/u/quanwuyang"  target="_blank">熊猫【无充值NPC】</a></div>
+			<div><a href="https://11"  target="_blank">熊猫【无充值NPC】</a></div>
 		  </div>
 	-->
 	  </fieldset>
