--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ legend {
 	letter-spacing: 2px;
 }
 #urls {
-	margin-left: 220px;
+	margin-left: 200px;
 	margin-top: 10px;
 	position: relative;
 	text-align: center;
@@ -71,7 +71,7 @@ legend {
 	display: block;
 	float: left;
 	background-color: #083466;
-	width: 300px;
+	width: 400px;
 	height: 40px;
 	
 	text-decoration: none;
@@ -133,11 +133,11 @@ body,td,th {
 				</span></span></legend>
 
 		<div id="urls">
-		  <div><a href="https://11"  target="_blank">熊猫【无充值NPC】</a></div>
+		  <div><a href="https://www.lanzouh.com/b00uybtjte"  target="_blank">天魔大陆【低消,高爆,pk首选,6元当爷】</a></div>
 		</div>
 	<!--		
 		<div id="urls">
-			<div><a href="https://11"  target="_blank">熊猫【无充值NPC】</a></div>
+			<div><a href="https://www.lanzouh.com/b00uybtjte"  target="_blank">熊猫【无充值NPC】</a></div>
 		  </div>
 	-->
 	  </fieldset>
