--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@ body,td,th {
 				</span></span></legend>
 
 		<div id="urls">
-		  <div><a href="https://www.lanzouh.com/b00uybtjte"  target="_blank">天魔大陆【低消,高爆,pk首选,6元当爷】</a></div>
+		  <div><a href="https://www.lanzouh.com/ioNnE26fwpkb"  target="_blank">天魔大陆【低消,高爆,pk首选,6元当爷】</a></div>
 		</div>
 	<!--		
 		<div id="urls">
-			<div><a href="https://www.lanzouh.com/b00uybtjte"  target="_blank">熊猫【无充值NPC】</a></div>
+			<div><a href=""  target="_blank">熊猫【无充值NPC】</a></div>
 		  </div>
 	-->
 	  </fieldset>
