--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@ body,td,th {
 		<div id="urls">
 		  <div><a href="https://www.lanzouh.com/ioNnE26fwpkb"  target="_blank">天魔大陆【低消,高爆,pk首选,6元当爷】</a></div>
 		</div>
-	<!--		
+		
 		<div id="urls">
-			<div><a href=""  target="_blank">熊猫【无充值NPC】</a></div>
+			<div><a href="https://wwm.lanzout.com/i5f5926lfn8b"  target="_blank">20迷失</a></div>
 		  </div>
-	-->
+
 	  </fieldset>
   </div>
 </div>
