--- a/index.html
+++ b/index.html
@@ -133,12 +133,10 @@ body,td,th {
 				</span></span></legend>
 
 		<div id="urls">
-		  <div><a href="https://www.lanzouh.com/ioNnE26fwpkb"  target="_blank">天魔大陆【低消,高爆,pk首选,6元当爷】</a></div>
+		  <div><a href="https://wwwf.lanzout.com/iHgu72crvs4f"  target="_blank">天意熊猫免费版【免费】</a></div>
 		</div>
 		
-		<div id="urls">
-			<div><a href="https://wwm.lanzout.com/i5f5926lfn8b"  target="_blank">20迷失</a></div>
-		  </div>
+
 
 	  </fieldset>
   </div>
