--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ body,td,th {
 				</span></span></legend>
 
 		<div id="urls">
-		  <div><a href="https://wwwf.lanzout.com/iHgu72crvs4f"  target="_blank">天意熊猫免费版【免费】</a></div>
+		  <div><a href="https://wwwf.lanzout.com/iHgu72crvs4f"  target="_blank">天下大乱单职业【无充值版】</a></div>
 		</div>
 		
 
