--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ body,td,th {
 				</span></span></legend>
 
 		<div id="urls">
-		  <div><a href="https://wwwf.lanzout.com/iUSFF2cxz5cf"  target="_blank">天下大乱单职业【无充值版】</a></div>
+		  <div><a href="https://wwwf.lanzout.com/iNTFG2dbaboh"  target="_blank">熊猫专属单职业【打怪积分，都可毕业】</a></div>
 		</div>
 		
 
