--- a/index.htm
+++ b/index.htm
@@ -33,7 +33,7 @@
 	<header id="header">
 		<div class="center">
 				<div id="logo">
-					<a href="#" > <img src="images/logo.png" alt="description " /></a>
+					<a href="#" > <img src="http://wqcdn.wqmaster.com/xishuohao/images/logo.png" alt="description " /></a>
 				</div>
 				<!-- logo结束 -->
 				<nav id="menu">
@@ -53,7 +53,7 @@
 	<div id="banner">
             		<div class="conbox">
                         <div class="Slide_"> 
-                        		<img src="images/banner.jpg" class="mainpic ani" swiper-animate-effect="fadeIn"    swiper-animate-duration="1.1s" swiper-animate-delay="0s">
+                        		<img src="http://wqcdn.wqmaster.com/xishuohao/images/banner.jpg" class="mainpic ani" swiper-animate-effect="fadeIn"    swiper-animate-duration="1.1s" swiper-animate-delay="0s">
                                 <div class="Version ani"  swiper-animate-effect="fadeInRight"    swiper-animate-duration="1.1s" swiper-animate-delay="0.1s">
                                     <h4 class="ani"   swiper-animate-effect="flipInX"    swiper-animate-duration="1.5s" swiper-animate-delay="1.1s"><a href="#">2024年度独家版本</a> </h4>
                                     <p class="ani"  swiper-animate-effect="flipInX"    swiper-animate-duration="1.5s" swiper-animate-delay="1.2s">2024强势来袭 热血未冷 传奇依旧</p>
@@ -75,7 +75,21 @@
 	<!-- 新一组 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
 						<div class="games">
 							<div class="photo">
-								<img src="temp_img/img_001.jpg" alt="description " />
+								<img src="http://wqcdn.wqmaster.com/xishuohao/temp_img/img_003.jpg" alt="description " />
+							</div>
+                            <a href="https://wwwf.lanzout.com/b00uybtjte" class="_btn_go" target="_blank">点击进入</a>
+                            <h4><a href="https://wwwf.lanzout.com/b00uybtjte" target="_blank">2024独家封神无限刀！就是爽！</a></h4>
+								
+							
+							<ul class="list">
+                                    <li><a>每日四区 次日合区 天天攻沙</a></li>
+                                    <li><a>自动挂机 全屏捡物 自动回收 小怪爆大米 宣传有充值！</a></li>
+							</ul>
+						</div>
+	<!-- 新一组 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
+						<div class="games">
+							<div class="photo">
+								<img src="http://wqcdn.wqmaster.com/xishuohao/temp_img/img_001.jpg" alt="description " />
 							</div>
                             <a href="https://wwwf.lanzout.com/b00uybtjte" class="_btn_go" target="_blank">点击进入</a>
                             <h4><a href="https://wwwf.lanzout.com/b00uybtjte" target="_blank">2024独家龙泉大陆无限刀 就是爽！</a></h4>
@@ -87,11 +101,9 @@
 							</ul>
 						</div>
 	<!-- 新一组 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
-
-	<!-- 新一组 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
 						<div class="games">
 							<div class="photo">
-								<img src="temp_img/img_003.jpg" alt="description " />
+								<img src="http://wqcdn.wqmaster.com/xishuohao/temp_img/img_010.jpg" alt="description " />
 							</div>
 
                             <h4><a>更多新版敬请期待...</a></h4>
