--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="referrer" content="no-referrer">
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
 	<title>每日更新最新市面独家好服！希硕号</title>
 	<link href="style/reset_css.css" rel="stylesheet" />
@@ -33,7 +34,7 @@
 	<header id="header">
 		<div class="center">
 				<div id="logo">
-					<a href="#" > <img src="images/logo.png" alt="description " /></a>
+					<a href="#" > <img src="http://wqcdn.wqmaster.com/xishuohao/images/logo.png" alt="description " /></a>
 				</div>
 				<!-- logo结束 -->
 				<nav id="menu">
