--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="referrer" content="no-referrer">
+
+    <meta charset="UTF-08">
+    <meta name="applicable-device" content="pc,mobile">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,maximum-scale=1">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <META HTTP-EQUIV="Pragma" CONTENT="no-cache"> 
+    <META HTTP-EQUIV="Cache-Control" CONTENT="no-cache"> 
+    <META HTTP-EQUIV="Expires" CONTENT="0"> 
+
+
+
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
 	<title>每日更新最新市面独家好服！希硕号</title>
 	<link href="style/reset_css.css" rel="stylesheet" />
