--- a/index.htm
+++ b/index.htm
@@ -96,7 +96,7 @@
 								
 							
 							<ul class="list">
-                                    <li><a>每日四区 次日合区 天天攻沙</a></li>
+                                    <li><a>每天12区 天天攻沙 20沙捐 多充无意 大米狂暴！</a></li>
                                     <li><a>自动挂机 全屏捡物 自动回收 小怪爆大米 宣传有充值！</a></li>
 							</ul>
 						</div>
