--- a/index.htm
+++ b/index.htm
@@ -14,21 +14,6 @@
 	<![endif]--> 
 
 
-
-    <meta charset="UTF-08">
-    <meta name="applicable-device" content="pc,mobile">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,maximum-scale=1">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <META HTTP-EQUIV="Pragma" CONTENT="no-cache"> 
-    <META HTTP-EQUIV="Cache-Control" CONTENT="no-cache"> 
-    <META HTTP-EQUIV="Expires" CONTENT="0"> 
-
-
-
-
 </head>
 <style>
 	.iframetype {
@@ -49,7 +34,7 @@
 	<header id="header">
 		<div class="center">
 				<div id="logo">
-					<a href="#" > <img src="http://wqcdn.wqmaster.com/xishuohao/images/logo.png" alt="description " /></a>
+					<a href="#" > <img src="http://tennismasterweb-1252036813.file.myqcloud.com/images/circle-outer.png" alt="description " /></a>
 				</div>
 				<!-- logo结束 -->
 				<nav id="menu">
