--- a/index.htm
+++ b/index.htm
@@ -34,7 +34,7 @@
 	<header id="header">
 		<div class="center">
 				<div id="logo">
-					<a href="#" > <img src="images/logo.png" alt="description " /></a>
+					<a href="#" > <img src="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/images/logo.png" alt="description " /></a>
 				</div>
 				<!-- logo结束 -->
 				<nav id="menu">
