--- a/index.htm
+++ b/index.htm
@@ -41,7 +41,7 @@
 					<ul>
 						<li>　　　　</a></li>
 						<li><a href="#">官方首页</a></li>
-						<li><a href="jiechi.html">防劫持教程</a></li>
+						<li><a href="jiechi.html" target="_blank>防劫持教程</a></li>
 					</ul>
 				</nav>
 				<!-- menu结束 -->
@@ -54,7 +54,7 @@
 	<div id="banner">
             		<div class="conbox">
                         <div class="Slide_"> 
-                        		<img src="images/banner.jpg" class="mainpic ani" swiper-animate-effect="fadeIn"    swiper-animate-duration="1.1s" swiper-animate-delay="0s">
+                        		<img src="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/images/banner.jpg" class="mainpic ani" swiper-animate-effect="fadeIn"    swiper-animate-duration="1.1s" swiper-animate-delay="0s">
                                 <div class="Version ani"  swiper-animate-effect="fadeInRight"    swiper-animate-duration="1.1s" swiper-animate-delay="0.1s">
                                     <h4 class="ani"   swiper-animate-effect="flipInX"    swiper-animate-duration="1.5s" swiper-animate-delay="1.1s"><a href="#">2024年度独家版本</a> </h4>
                                     <p class="ani"  swiper-animate-effect="flipInX"    swiper-animate-duration="1.5s" swiper-animate-delay="1.2s">2024强势来袭 热血未冷 传奇依旧</p>
@@ -76,7 +76,7 @@
 	<!-- 新一组 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
 						<div class="games">
 							<div class="photo">
-								<img src="temp_img/img_003.jpg" alt="description " />
+								<img src="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/temp_img/img_003.jpg" alt="description " />
 							</div>
                             <a href="https://wwwf.lanzout.com/b00uybtjte" class="_btn_go" target="_blank">点击进入</a>
                             <h4><a href="https://wwwf.lanzout.com/b00uybtjte" target="_blank">2024独家封神无限刀！就是爽！</a></h4>
@@ -90,7 +90,7 @@
 	<!-- 新一组 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
 						<div class="games">
 							<div class="photo">
-								<img src="temp_img/img_001.jpg" alt="description " />
+								<img src="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/temp_img/img_001.jpg" alt="description " />
 							</div>
                             <a href="https://wwwf.lanzout.com/b00uybtjte" class="_btn_go" target="_blank">点击进入</a>
                             <h4><a href="https://wwwf.lanzout.com/b00uybtjte" target="_blank">2024独家龙泉大陆无限刀 就是爽！</a></h4>
@@ -104,7 +104,7 @@
 	<!-- 新一组 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
 						<div class="games">
 							<div class="photo">
-								<img src="temp_img/img_010.jpg" alt="description " />
+								<img src="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/temp_img/img_010.jpg" alt="description " />
 							</div>
 
                             <h4><a>更多新版敬请期待...</a></h4>
