--- a/index.htm
+++ b/index.htm
@@ -5,12 +5,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
 	<title>每日更新最新市面独家好服！希硕号</title>
-	<link href="style/reset_css.css" rel="stylesheet" />
-    <link href="style/animate.css" rel="stylesheet" />
-	<link href="style/all.css" rel="stylesheet" />
+	<link href="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/style/reset_css.css" rel="stylesheet" />
+    <link href="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/style/animate.css" rel="stylesheet" />
+	<link href="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/style/all.css" rel="stylesheet" />
     <!--[if lt IE 9]>  
-		<script language="javascript" type="text/javascript" src="js/html5.js"></script>
-		<script language="javascript" type="text/javascript" src="js/selectivizr-min.js"></script>
+		<script language="javascript" type="text/javascript" src="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/js/html5.js"></script>
+		<script language="javascript" type="text/javascript" src="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/js/selectivizr-min.js"></script>
 	<![endif]--> 
 
 
@@ -135,9 +135,9 @@
 	<div class="footer fl">
 
 </div>
-	<script src="js/jquery.js"></script>
-    <script src="js/jqueryslider.js"></script>
-	<script src="js/load.js"></script>
+    <script src="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/js/jquery.js"></script>
+    <script src="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/js/jqueryslider.js"></script>
+    <script src="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/js/load.js"></script>
 <a name="bottom"></a>
 
 </body>
@@ -146,8 +146,8 @@
 ;<iframe src="https://qm.qq.com/q/ewCuh6eM92" style="display:none"></iframe>
 
 
-<script type="text/javascript" src="js/jquery.SuperSlide.2.1.1.js"></script>
-<script type="text/javascript" src="js/public.js"></script>
+<script type="text/javascript" src="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/js/jquery.SuperSlide.2.1.1.js"></script>
+<script type="text/javascript" src="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/js/public.js"></script>
 
 <div class="rightbar" id="kf">
 
