--- a/index.htm
+++ b/index.htm
@@ -5,9 +5,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
 	<title>每日更新最新市面独家好服！希硕号</title>
-	<link href="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/style/reset_css.css" rel="stylesheet" />
-    <link href="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/style/animate.css" rel="stylesheet" />
-	<link href="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/style/all.css" rel="stylesheet" />
+	<link href="style/reset_css.css" rel="stylesheet" />
+    <link href="style/animate.css" rel="stylesheet" />
+	<link href="style/all.css" rel="stylesheet" />
     <!--[if lt IE 9]>  
 		<script language="javascript" type="text/javascript" src="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/js/html5.js"></script>
 		<script language="javascript" type="text/javascript" src="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/js/selectivizr-min.js"></script>
