--- a/index.htm
+++ b/index.htm
@@ -41,7 +41,7 @@
 					<ul>
 						<li>　　　　</a></li>
 						<li><a href="#">官方首页</a></li>
-						<li><a href="jiechi.html">防劫持教程</a></li>
+						<li><a href="jiechi.html"  target="_blank">防劫持教程</a></li>
 					</ul>
 				</nav>
 				<!-- menu结束 -->
