--- a/index.htm
+++ b/index.htm
@@ -9,8 +9,8 @@
     <link href="style/animate.css" rel="stylesheet" />
 	<link href="style/all.css" rel="stylesheet" />
     <!--[if lt IE 9]>  
-		<script language="javascript" type="text/javascript" src="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/js/html5.js"></script>
-		<script language="javascript" type="text/javascript" src="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/js/selectivizr-min.js"></script>
+		<script language="javascript" type="text/javascript" src="js/html5.js"></script>
+		<script language="javascript" type="text/javascript" src="js/selectivizr-min.js"></script>
 	<![endif]--> 
 
 
