--- a/index.htm
+++ b/index.htm
@@ -135,9 +135,9 @@
 	<div class="footer fl">
 
 </div>
-    <script src="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/js/jquery.js"></script>
-    <script src="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/js/jqueryslider.js"></script>
-    <script src="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/js/load.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/jqueryslider.js"></script>
+    <script src="js/load.js"></script>
 <a name="bottom"></a>
 
 </body>
