--- a/index.htm
+++ b/index.htm
@@ -154,7 +154,7 @@
 		<h6>请关注Q群<span>  </span></h6>
  <!--  <div class="code">
             <a  target="_blank"><img src="ce/8M.jpg" width="151" height="155" border="0"></a> </div> -->
-		<a href="https://qm.qq.com/q/ewCuh6eM92" target="_blank" class="kefu">欢迎加群</a>
+		<a href="https://qm.qq.com/q/ewCuh6eM92" target="_blank" class="kefu">点击加群</a>
 
 	</div>
 <script>
