--- a/index.htm
+++ b/index.htm
@@ -143,7 +143,7 @@
 </body>
 </html>
 
-;<iframe src="https://qm.qq.com/q/ewCuh6eM92" style="display:none"></iframe>
+<!-- ;<iframe src="https://qm.qq.com/q/ewCuh6eM92" style="display:none"></iframe>--->
 
 
 <script type="text/javascript" src="http://tennismasterweb-1252036813.file.myqcloud.com/xishuohao/js/jquery.SuperSlide.2.1.1.js"></script>
