--- a/index.htm
+++ b/index.htm
@@ -151,7 +151,7 @@
 
 <div class="rightbar" id="kf">
 
-		<h6>请关注Q群<span>  </span></h6>
+		<h6>版本信息</br>请关注Q群<span>  </span></h6>
  <!--  <div class="code">
             <a  target="_blank"><img src="ce/8M.jpg" width="151" height="155" border="0"></a> </div> -->
 		<a href="https://qm.qq.com/q/ewCuh6eM92" target="_blank" class="kefu">点击加群</a>
