--- a/index.htm
+++ b/index.htm
@@ -57,7 +57,7 @@
 					<h3 class="PartTitle"><strong>每周最少更新一个新版本！【绝对独家版本】</strong>/ Game Recommended） </h3>
 
 	<!-- 新一组 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
-	<!-- 鬼火 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
+	<!-- 鬼火 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --
 						<div class="games">
 							<div class="photo">
 								<img src="temp_img/img_005.jpg" alt="description " />
@@ -67,10 +67,10 @@
 								
 							
 							<ul class="list">
-                                    <li><a>首沙红包 预更新 敬请期待</a></li>
+                                    <li><a>首沙红包，敬请期待</a></li>
                                     <li><a>刀刀货币，20元满赞！</a></li>
 							</ul>
-						</div>
+						</div> --->
 	<!-- 一念永恒 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
 						<div class="games">
 							<div class="photo">
