--- a/index.htm
+++ b/index.htm
@@ -57,20 +57,20 @@
 					<h3 class="PartTitle"><strong>每周最少更新一个新版本！【绝对独家版本】</strong>/ Game Recommended） </h3>
 
 	<!-- 新一组 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
-	<!-- 鬼火 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --
+	<!-- 怒火麒麟 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
 						<div class="games">
 							<div class="photo">
-								<img src="temp_img/img_005.jpg" alt="description " />
+								<img src="temp_img/img_006.jpg" alt="description " />
 							</div>
-                            <a href=" " class="_btn_go" target="_blank">点击进入</a>
-                            <h4><a href=" " target="_blank">鬼火攻速希硕号攻沙发红包！</a></h4>
+                            <a href="https://wwwf.lanzout.com/iQjuK2eky7ha" class="_btn_go" target="_blank">点击进入</a>
+                            <h4><a href="https://wwwf.lanzout.com/iQjuK2eky7ha" target="_blank">怒火麒麟希硕号独家攻城版本！</a></h4>
 								
 							
 							<ul class="list">
-                                    <li><a>首沙红包，敬请期待</a></li>
-                                    <li><a>刀刀货币，20元满赞！</a></li>
+                                    <li><a>首沙红包，次日合区！</a></li>
+                                    <li><a>18沙捐领攻城红包！</a></li>
 							</ul>
-						</div> --->
+						</div>
 	<!-- 一念永恒 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
 						<div class="games">
 							<div class="photo">
