--- a/index.htm
+++ b/index.htm
@@ -57,18 +57,18 @@
 					<h3 class="PartTitle"><strong>每周最少更新一个新版本！【绝对独家版本】</strong>/ Game Recommended） </h3>
 
 	<!-- 新一组 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
-	<!-- 芳华 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
+	<!-- 梦翔忘忧 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
 						<div class="games">
 							<div class="photo">
-								<img src="temp_img/img_007.jpg" alt="description " />
+								<img src="temp_img/img_002.jpg" alt="description " />
 							</div>
-                            <a href="https://wwwf.lanzout.com/iImXe2evxegb" class="_btn_go" target="_blank">点击进入</a>
-                        <h4><a href="https://wwwf.lanzout.com/iImXe2evxegb" target="_blank">2024芳华沉默无限刀-希硕号独家版本！</a></h4>
+                            <a href="https://wwwf.lanzout.com/inoVT2f4syva" class="_btn_go" target="_blank">点击进入</a>
+                        <h4><a href="https://wwwf.lanzout.com/inoVT2f4syva" target="_blank">梦翔忘忧无限刀-攻沙大奖！</a></h4>
 								
 							
 							<ul class="list">
-                                    <li><a>每日都有新区 次日合区 天天攻沙 </a></li>
-                                    <li><a> 十元全满，唯一消费10元沙捐</a></li>
+                                    <li><a>每日都有新区 次日合区 天天攻沙 等你来战</a></li>
+                                    <li><a> 20米沙捐 2米狂暴 沙捐即可参战</a></li>
 							</ul>
 						</div>
 
