--- a/index.htm
+++ b/index.htm
@@ -60,15 +60,15 @@
 	<!-- 梦翔忘忧 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
 						<div class="games">
 							<div class="photo">
-								<img src="temp_img/img_002.jpg" alt="description " />
+								<img src="temp_img/img_005.jpg" alt="description " />
 							</div>
-                            <a href="https://wwwf.lanzout.com/inoVT2f4syva" class="_btn_go" target="_blank">点击进入</a>
-                        <h4><a href="https://wwwf.lanzout.com/inoVT2f4syva" target="_blank">梦翔忘忧无限刀-攻沙大奖！</a></h4>
+                            <a href="https://wwwf.lanzout.com/iSc4C2ff3qzc" class="_btn_go" target="_blank">点击进入</a>
+                        <h4><a href="https://wwwf.lanzout.com/iSc4C2ff3qzc" target="_blank">九零火龙无限刀-攻沙大奖！</a></h4>
 								
 							
 							<ul class="list">
-                                    <li><a>每日都有新区 次日合区 天天攻沙 等你来战</a></li>
-                                    <li><a> 20米沙捐 2米狂暴 沙捐即可参战</a></li>
+                                    <li><a>每日都有新区 次日合区 攻沙大奖 等你来战</a></li>
+                                    <li><a>20米沙捐 全满 沙捐即可领取攻沙大奖 还等什么 来战</a></li>
 							</ul>
 						</div>
 
