--- a/index.htm
+++ b/index.htm
@@ -57,17 +57,17 @@
 					<h3 class="PartTitle"><strong>每周最少更新一个新版本！【绝对独家版本】</strong>/ Game Recommended） </h3>
 
 	<!-- 新一组 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
-	<!-- 梦翔忘忧 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
+	<!-- 天门迷失 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
 						<div class="games">
 							<div class="photo">
-								<img src="temp_img/img_006.jpg" alt="description " />
+								<img src="temp_img/img_007.jpg" alt="description " />
 							</div>
-                            <a href="https://wwwf.lanzout.com/imznV2fz0z9c" class="_btn_go" target="_blank">点击进入</a>
-                        <h4><a href="https://wwwf.lanzout.com/imznV2fz0z9c" target="_blank">兔八哥无限刀免费无充值NPC</a></h4>
+                            <a href="https://wwwf.lanzout.com/iwYi82gcebne" class="_btn_go" target="_blank">点击进入</a>
+                        <h4><a href="https://wwwf.lanzout.com/iwYi82gcebne" target="_blank">天门迷失无限刀免费无充值NPC</a></h4>
 								
 							
 							<ul class="list">
-                                    <li><a>每日一区</a></li>
+                                    <li><a>每天三区  </a></li>
                                     <li><a>沙捐狂暴免费</a></li>
 							</ul>
 						</div>
