--- a/index.htm
+++ b/index.htm
@@ -71,6 +71,20 @@
                                     <li><a>沙捐狂暴免费</a></li>
 							</ul>
 						</div>
+	<!-- 兔八哥 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
+						<div class="games">
+							<div class="photo">
+								<img src="temp_img/img_006.jpg" alt="description " />
+							</div>
+                            <a href="https://wwwf.lanzout.com/imznV2fz0z9c" class="_btn_go" target="_blank">点击进入</a>
+                        <h4><a href="https://wwwf.lanzout.com/imznV2fz0z9c" target="_blank">兔八哥无限刀免费无充值NPC</a></h4>
+								
+							
+							<ul class="list">
+                                    <li><a>每次一区 </a></li>
+                                    <li><a>沙捐狂暴免费</a></li>
+							</ul>
+						</div>
 
 	<!-- 新一组 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
 						<div class="games">
