--- a/index.htm
+++ b/index.htm
@@ -60,6 +60,20 @@
 	<!-- 天门迷失 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
 						<div class="games">
 							<div class="photo">
+								<img src="temp_img/img_002.jpg" alt="description " />
+							</div>
+                            <a href="https://wwwf.lanzout.com/iMx9f2gxgtli" class="_btn_go" target="_blank">点击进入</a>
+                        <h4><a href="https://wwwf.lanzout.com/iMx9f2gxgtli" target="_blank">鹤啸九天  进群领码 无需宣传</a></h4>
+								
+							
+							<ul class="list">
+                                    <li><a>每天三区，次日合区！</a></li>
+                                    <li><a>免费通关，无充值NPC！</a></li>
+							</ul>
+						</div>
+	<!-- 天门迷失 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
+						<div class="games">
+							<div class="photo">
 								<img src="temp_img/img_009.jpg" alt="description " />
 							</div>
                             <a href="https://wwwf.lanzout.com/iTGy72gnmrkb" class="_btn_go" target="_blank">点击进入</a>
