--- a/index.htm
+++ b/index.htm
@@ -62,13 +62,13 @@
 							<div class="photo">
 								<img src="temp_img/img_003.jpg" alt="description " />
 							</div>
-                            <a href="https://wwwf.lanzout.com/ijr3a2qaevqf" class="_btn_go" target="_blank">点击进入</a>
-                        <h4><a href="https://wwwf.lanzout.com/ijr3a2qaevqf" target="_blank">神影沉默 刀刀全货币 免费白嫖一切</a></h4>
+                            <a href="https://wwwf.lanzout.com/iQDm02r2haqf" class="_btn_go" target="_blank">点击进入</a>
+                        <h4><a href="https://wwwf.lanzout.com/iQDm02r2haqf" target="_blank">龙腾破军三职业  攻沙红包</a></h4>
 								
 							
 							<ul class="list">
-                                    <li><a>每天两区，次日合区</a></li>
-                                    <li><a>单职业无限刀</a></li>
+                                    <li><a>每天四区 次日合区攻沙</a></li>
+                                    <li><a>唯一消费30沙捐 攻击切割百分之一 爆率提升</a></li>
 							</ul>
 						</div>
 
