--- a/index.htm
+++ b/index.htm
@@ -62,8 +62,8 @@
 							<div class="photo">
 								<img src="temp_img/img_003.jpg" alt="description " />
 							</div>
-                            <a href="https://wwwf.lanzout.com/iQDm02r2haqf" class="_btn_go" target="_blank">点击进入</a>
-                        <h4><a href="https://wwwf.lanzout.com/iQDm02r2haqf" target="_blank">龙腾破军三职业  攻沙红包</a></h4>
+                            <a href="https://wwwf.lanzout.com/iUWW02r2igta" class="_btn_go" target="_blank">点击进入</a>
+                        <h4><a href="https://wwwf.lanzout.com/iUWW02r2igta" target="_blank">龙腾破军三职业  攻沙红包</a></h4>
 								
 							
 							<ul class="list">
