--- a/index.htm
+++ b/index.htm
@@ -57,7 +57,21 @@
 					<h3 class="PartTitle"><strong>每周最少更新一个新版本！【绝对独家版本】</strong>/ Game Recommended） </h3>
 
 	<!-- 新一组 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
-	<!-- 天门迷失 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
+	<!-- 梦幻单职业 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
+						<div class="games">
+							<div class="photo">
+								<img src="temp_img/img_004.jpg" alt="description " />
+							</div>
+                            <a href="https://wwwf.lanzout.com/iOScx2r9e0jc" class="_btn_go" target="_blank">点击进入</a>
+                        <h4><a href="https://wwwf.lanzout.com/iOScx2r9e0jc" target="_blank">梦幻单职业 攻沙红包</a></h4>
+								
+							
+							<ul class="list">
+                                    <li><a>每天四区 次日合区攻沙</a></li>
+                                    <li><a>唯一消费30 参与攻沙</a></li>
+							</ul>
+						</div>
+	<!-- 龙腾破军 - -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --->
 						<div class="games">
 							<div class="photo">
 								<img src="temp_img/img_003.jpg" alt="description " />
